force-app/main/default/objects/Programmatic_Deal_Request__c/Programmatic_Deal_Request__c.object-meta.xml
<CustomObject>
    <label>Programmatic Deal Request</label>
    <nameField>
        <displayFormat>P{YYYY}{MM}-{000}</displayFormat>
        <label>Programmatic Deal Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programmatic Deal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>