force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Asana_URL__c.field-meta.xml
<CustomField>
    <fullName>Asana_URL__c</fullName>
    <label>Asana URL</label>
    <type>Url</type>
</CustomField>