force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Block_List__c.field-meta.xml
<CustomField>
    <fullName>Block_List__c</fullName>
    <label>Block List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>