force-app/main/default/objects/Programmatic_Deal_Request__c/fields/CPM__c.field-meta.xml
<CustomField>
    <fullName>CPM__c</fullName>
    <label>CPM</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>