force-app/main/default/objects/Programmatic_Deal_Request__c/fields/CPM_Type__c.field-meta.xml
<CustomField>
    <fullName>CPM_Type__c</fullName>
    <label>CPM Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>