force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Creative_Lengths__c.field-meta.xml
<CustomField>
    <fullName>Creative_Lengths__c</fullName>
    <label>Creative Lengths</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>