force-app/main/default/objects/Programmatic_Deal_Request__c/fields/DSP__c.field-meta.xml
<CustomField>
    <fullName>DSP__c</fullName>
    <label>DSP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>