force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Hold_Co__c.field-meta.xml
<CustomField>
    <fullName>Hold_Co__c</fullName>
    <formula>Opportunity_Product__r.Opportunity.Holding_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Co</label>
    <type>Text</type>
</CustomField>