force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Inclusion_List__c.field-meta.xml
<CustomField>
    <fullName>Inclusion_List__c</fullName>
    <label>Inclusion List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>