force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTV Video</fullName>
            </value>
            <value>
                <fullName>Cross Screen Video</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>