force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Brand/Notes</label>
    <type>TextArea</type>
</CustomField>