force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Programmatic Deal Requests</relationshipLabel>
    <relationshipName>Programmatic_Deal_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>