force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Partner_Id_DSP__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id_DSP__c</fullName>
    <label>Client&apos;s Partner Id on DSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>