force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Programmatic_Type__c.field-meta.xml
<CustomField>
    <fullName>Programmatic_Type__c</fullName>
    <label>Programmatic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>