force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Seat_Id_DSP__c.field-meta.xml
<CustomField>
    <fullName>Seat_Id_DSP__c</fullName>
    <label>Client&apos;s Seat Id on DSP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>