force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Sensitive_Categories__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Categories__c</fullName>
    <label>Sensitive Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Lottery</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>