force-app/main/default/objects/Programmatic_Deal_Request__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <label>Targeting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>